--- a/style.css
+++ b/style.css
@@ -9,20 +9,20 @@
 
 html, body {                      /* geldt voor html en body */
   margin: 0px;                    /* standaard marge 0 */
-  background-color: #EEEEEE;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
+  background-color: #7a7a7a;    /* achtergrondkleur lichtgrijs */
+  color: #000000;               /* tekstkleur donkergrijs */
 }  
 
 body * {                          /* geldt voor alles in body */
   overflow: hidden;               /* zorgt dat DIV en andere block elementen de hoogte krijgt van wat erin zit (anders is het soms 0) */
   box-sizing: border-box;         /* zorg dat border meetelt bij de width en height van boxen */
-  margin: 0px;                    /* standaard marge 0 */
+  margin: 1px;                    /* standaard marge 0 */
 }
 
 /* Indeling voor alle pagina's */
 
 .page {
-  width: 700px;                   /* vaste breedte van 700 pixels */
+  width: 800px;                   /* vaste breedte van 700 pixels */
   margin: 10px auto;              /* boven en onder 0 pixels marge, links en rechts marge gelijk verdeeld (gecentreerd) */
 }
 
@@ -61,16 +61,17 @@ p {
 /* Opmaak voor alle pagina's */
 
 h1, h2, h3 {
-      color: skyblue;
+      color: #ff2600;
 }
 
 .smalltext {
     text-align: center;
     font-size: 0.7em;
+  color: #ff2600;
 }
 
 a {
-    color: skyblue;
+    color: black;
     text-decoration: none;
 }
 
@@ -84,8 +85,9 @@ nav ul {
     list-style-type: none;
     margin: auto;
     padding: 0;
-    background-color: #dddddd;
+    background-color: #000000;
     overflow: hidden;
+  border-radius: 10px;
 }
 
 nav ul li {
@@ -96,14 +98,17 @@ nav li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 15px 15px;
     text-decoration: none;
 }
 
 nav li a:hover {
     background-color: #aaaaaa;
+  border-radius: 10px;
 }
 
 nav li a.active {
-    background-color: skyblue;
+    background-color: #ff2600;
+  border-radius:10px ;
 }
+
