--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 html, body {                      /* geldt voor html en body */
   margin: 0px;                    /* standaard marge 0 */
-  background-color: #7a7a7a;    /* achtergrondkleur lichtgrijs */
+  background-color: #606060;    /* achtergrondkleur lichtgrijs */
   color: #000000;               /* tekstkleur donkergrijs */
 }  
 
@@ -103,7 +103,7 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #aaaaaa;
+    background-color: #444444;
   border-radius: 10px;
 }
 
