--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 html, body {                      /* geldt voor html en body */
   margin: 0px;                    /* standaard marge 0 */
-  background-color: #606060;    /* achtergrondkleur lichtgrijs */
+  background-color: #424242;    /* achtergrondkleur lichtgrijs */
   color: #000000;               /* tekstkleur donkergrijs */
 }  
 
@@ -87,7 +87,7 @@ nav ul {
     padding: 0;
     background-color: #000000;
     overflow: hidden;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 nav ul li {
@@ -104,11 +104,15 @@ nav li a {
 
 nav li a:hover {
     background-color: #444444;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 nav li a.active {
     background-color: #ff2600;
-  border-radius:10px ;
+  border-radius:15px ;
+}
+
+hr {
+  border-color:black;
 }
 
