--- a/style.css
+++ b/style.css
@@ -44,6 +44,15 @@ h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
 #FIA {
   color:#d6d6d6;
 }
+
+#formule-startinggrid {
+   width: 300px ;  
+   float:left;
+   padding-right:10px;
+}
+
+
+
 p {
   margin: 10px 0px;
   text-align: justify;            /* tekst links en rechts uitvullen */
